--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="chember-site-plan.html">Chamber</a></li>
-            <li><a href="#">Site Plan</a></li>
+            <li><a href="chember/index.html">chember</a></li>
+            <li><a href="chember-site-plan.html">Site plan</a></li>
             <li><a href="#">Form</a></li>
         </ul>
     </nav>
